<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.juan.loggin.MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Loggin"
            android:gravity="center"
            android:textSize="30dp"
            android:textColor="@color/forestgreen"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Loggin: "
            android:textSize="20sp"
            android:textColor="@color/black" />
        <EditText
            android:id="@+id/eLoggin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loggin"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password: "
            android:textSize="20sp"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/ePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Repeat Password: "
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/eRPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rpassword"
            android:inputType="textPassword"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="E-mail"
            android:textSize="20sp"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/eMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>
    </LinearLayout>
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/rMasculino"
            android:text="@string/masculino"
            android:checked="true"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/rFemenino"
            android:text="@string/femenino"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Birth date"
            android:onClick="showDatePickerDialog"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Birth place:  "
            android:textSize="20dp"
            android:textColor="@color/black"/>
        <Spinner
            android:id="@+id/sCiudades"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hobbies:"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:gravity="center_vertical"
            android:layout_weight="1" />
        <CheckBox
            android:id="@+id/cCine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cCine"
            android:textSize="12dp"
            android:layout_weight="1"/>
        <CheckBox
            android:id="@+id/cCantar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cCantar"
            android:textSize="12dp"
            android:layout_weight="1"/>
        <CheckBox
            android:id="@+id/cCaminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cCaminar"
            android:textSize="12dp"
            android:layout_weight="1"/>
        <CheckBox
            android:id="@+id/cBailar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cBailar"
            android:textSize="12dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <Button
        android:id="@+id/bAceptar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Accept"
        android:textAllCaps="false"/>
    <TextView
        android:id="@+id/tInfomacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Personal information:  "
        android:textSize="25sp"
        android:textColor="@color/forestgreen"/>

</LinearLayout>
</ScrollView>
